# hlox-proto02

./: README.md  cabal.project  init_hlox_cli.sh  init_hlox_core.sh
hlox-cli/: CHANGELOG.md  hlox-cli.cabal
hlox-cli/app/: LoxCli.hs
hlox-cli/src/: MyLib.hs
hlox-cli/src/Lox/: ReadFile.hs  Repl.hs
hlox-cli/test/: Main.hs
hlox-core/: CHANGELOG.md  hlox-core.cabal
hlox-core/src/Data/Lox/: Lexer.hs  Token.hs
hlox-core/src/Lox/: Lexer.hs
hlox-core/src/Lox/Lexer/: Operator.hs
hlox-core/test/: Main.hs
